tests/invalid/missing_annotation_name.rk
class nested_class_test {
    @main
    static def main() {

    }

    @
    static def foo() {
        
    }
}